WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
213808
App-bound JavaScript and Navigation failures should have specific error codes
https://bugs.webkit.org/show_bug.cgi?id=213808
Summary
App-bound JavaScript and Navigation failures should have specific error codes
Brady Eidson
Reported
2020-06-30 12:05:04 PDT
App-bound JavaScript and Navigation failures should have specific error codes <
rdar://problem/64940268
>
Attachments
Patch
(16.85 KB, patch)
2020-06-30 12:08 PDT
,
Brady Eidson
timothy
: review+
Details
Formatted Diff
Diff
Patch for landing
(16.95 KB, patch)
2020-06-30 14:27 PDT
,
Brady Eidson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Brady Eidson
Comment 1
2020-06-30 12:08:09 PDT
Created
attachment 403219
[details]
Patch
Brady Eidson
Comment 2
2020-06-30 14:09:04 PDT
(Was holding off on r? until we ran the updated tests on the simulator. They worked) r?
Kate Cheney
Comment 3
2020-06-30 14:15:53 PDT
Comment on
attachment 403219
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=403219&action=review
LGTM, just the one comment about the error message wording. Thanks for adding this!
> Source/WebKit/UIProcess/API/Cocoa/WKError.mm:81 > + return WEB_UI_STRING("Attempted to navigation away from an app-bound domain or navigate after using restricted APIs", "WKErrorNavigationAppBoundDomain description");
This probably should be "Attempted to navigate"
Brady Eidson
Comment 4
2020-06-30 14:27:34 PDT
Created
attachment 403241
[details]
Patch for landing
EWS
Comment 5
2020-06-30 15:21:39 PDT
Committed
r263774
: <
https://trac.webkit.org/changeset/263774
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 403241
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug