App-bound JavaScript and Navigation failures should have specific error codes. <rdar://problem/64940268> and https://bugs.webkit.org/show_bug.cgi?id=213808

Reviewed by Tim Hatcher.
(Informally by Kate Cheney)

Source/WebCore:

Covered by API tests.

* bindings/js/ExceptionDetails.h:

Source/WebKit:

* UIProcess/API/Cocoa/WKError.h:
* UIProcess/API/Cocoa/WKError.mm:
(localizedDescriptionForErrorCode):

* UIProcess/API/Cocoa/WKWebView.mm:
(nsErrorFromExceptionDetails):

* UIProcess/Cocoa/WebPageProxyCocoa.mm:
(WebKit::WebPageProxy::errorForUnpermittedAppBoundDomainNavigation):

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::decidePolicyForNavigationAction):
* UIProcess/WebPageProxy.h:

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::runJavaScript):

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/InAppBrowserPrivacy.mm:
(TEST):


Canonical link: https://commits.webkit.org/226619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@263774 268f45cc-cd09-0410-ab3c-d52691b4dbfc